kubernetes/deployment.k8.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: beta
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: beta
  labels:
    app: api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: SkinSight/api:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
          imagePullPolicy: Always
      serviceAccountName: default
