kubernetes/ingress.k8.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: beta
spec:
  ingressClassName: nginx
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: api-svc
                port:
                  number: 8000
